<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_NovRam_Status" Id="{117fceb6-7f01-4611-8869-57e3be5a43c8}">
    <Declaration><![CDATA[TYPE ST_NovRam_Status :
STRUCT
	nowRowIndex:UDINT;
	writenIndex:UDINT;
	RowDataLocked:ARRAY[0..GVL.NovRamBufferRatio-1]OF BOOL;
	writenCount:UDINT;//1217
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>